added hypr fastfetch config

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 
 !.gitignore
 !.zshrc
+!.config
+
 !.config/hypr
+!.config/hypr/**
+
 !.config/nvim
+!.config/nvim/**
+
 !.config/fastfetch
+!.config/fastfetch/**
